# testmag

./: PROPELLANT_README.md  README.md  comp.py  example.py  magui.py  propellant_demo.py  propellant_measurement_system.py  pyproject.toml  test_improved_propellant.py  test_pyvista_fix.py  test_simple.py  test_simple_propellant.py  test_strong_magnet.py  test_ultra_strong_field.py
