[project]
name = "magui"
version = "0.1.0"
description = "Magnetic Field Simulation GUI Library combining MagpyLib, CustomTkinter, and Seaborn"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MagUI Contributors"},
]
keywords = ["magnetism", "simulation", "gui", "physics", "magpylib", "customtkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "customtkinter>=5.2.2",
    "magpylib>=5.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "pyvista>=0.45.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/magui/magui"
Documentation = "https://github.com/magui/magui#readme"
Repository = "https://github.com/magui/magui.git"
Issues = "https://github.com/magui/magui/issues"

[project.scripts]
magui-demo = "demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magui"]
